# chromadb-start

./: .gitignore  README.md  load_recipes.py  pyproject.toml  recipes_ai_assistant.py  search_assistant.py
chroma_functions/: __init__.py
recipes/: 10_gazpacho.txt  11_pimientos_verdes_codornices.txt  12_pollo_chilindron.txt  13_conejo_castellana.txt  14_lomo_ciervo.txt  15_perdiz_judias.txt  16_mojo_picon.txt  1_conejo_al_ajillo.txt  2_pollo_leonesa.txt  3_pavo_castanias.txt  4_gazpacho_manchego.txt  5_codornices_escabeche.txt  6_sopa_mejillones_marinera.txt  7_merluza_salsa_verde.txt  8_bacalao_pil.txt  9_calamares_tinta.txt
scripts/: extract.py
